crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_drop.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
expression: "run_both(dir, &name, &name)"
input_file: crates/pika_cli/tests/run/panic_drop.pk
---
exit: 101
--- stdout ---
before
--- stderr ---
panic: drop failed
  at panic_drop.pk:3:28
    3 |     :fn drop mut self do={ :panic "drop failed" }
      |                            ^
