crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_fmt.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
expression: "run_both(dir, &name, &name)"
input_file: crates/pika_cli/tests/run/panic_fmt.pk
---
exit: 101
--- stdout ---
1
x --- stderr ---
panic: cannot show zero
  at panic_fmt.pk:5:33
    5 |         :if ($self->n = 0) do={ :panic "cannot show zero" }
      |                                 ^
