crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_index.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
assertion_line: 61
expression: native
input_file: crates/pika_cli/tests/run/panic_index.pk
---
exit: 101
--- stdout ---
30
--- stderr ---
panic: index out of bounds: the index is 3 but the length is 3
  at panic_index.pk:4:15
