crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_overflow.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
expression: "run_both(dir, &name, &name)"
input_file: crates/pika_cli/tests/run/panic_overflow.pk
---
exit: 101
--- stdout ---
before
--- stderr ---
panic: integer overflow
  at panic_overflow.pk:1:39
    1 | :fn add a:u8 b:u8 -> u8 do={ :return ($a + $b) }
      |                                       ^
