crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_stack_overflow.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
expression: native
input_file: crates/pika_cli/tests/run/panic_stack_overflow.pk
---
exit: 101
--- stdout ---
before
--- stderr ---
panic: stack overflow
  at panic_stack_overflow.pk:1:5
